--- a/php-sample.yaml
+++ b/php-sample.yaml
@@ -14,7 +14,7 @@ spec:
         app: sample-php
     spec:
       containers:
-      - image: lightbulb/php7.4.33-apache
+      - image: lightbulb233/php7.4.33-apache
         name: php-sample
         imagePullPolicy: Always
         ports:
