--- a/manifests/workload.yaml
+++ b/manifests/workload.yaml
@@ -15,7 +15,7 @@ spec:
         app: sample-php
     spec:
       containers:
-      - image: lightbulb233/php7.4.33-apache
+      - image: lightbulb233/php7.4.33-apache:v2
         name: php-sample
         imagePullPolicy: Always
         ports:
